--- a/images/cloudbuild.yaml
+++ b/images/cloudbuild.yaml
@@ -18,9 +18,11 @@ substitutions:
   _USE_CACHE: "false"
   _IMAGE_PREFIX: kube-pod-broker
   _IMAGE_TAG: latest
-
+  _TARGET_REPO: us-docker.pkg.dev/${PROJECT_ID}/selkies-images
+# 
 options:
   machineType: N1_HIGHCPU_8
+  dynamic_substitutions: true
 
 tags:
   - selkies-images
@@ -31,23 +33,23 @@ images: [
     # installer
     'gcr.io/${PROJECT_ID}/broker-installer:${_IMAGE_TAG}',
     'gcr.io/${PROJECT_ID}/broker-installer:latest',
-    'us-docker.pkg.dev/${PROJECT_ID}/spaces-images/broker-installer:${_IMAGE_TAG}',
-    'us-docker.pkg.dev/${PROJECT_ID}/spaces-images/broker-installer:latest',
+    '${_TARGET_REPO}/broker-installer:${_IMAGE_TAG}',
+    '${_TARGET_REPO}/broker-installer:latest',
     # controller
     'gcr.io/${PROJECT_ID}/${_IMAGE_PREFIX}-controller:${_IMAGE_TAG}',
     'gcr.io/${PROJECT_ID}/${_IMAGE_PREFIX}-controller:latest',
-    'us-docker.pkg.dev/${PROJECT_ID}/spaces-images/${_IMAGE_PREFIX}-controller:${_IMAGE_TAG}',
-    'us-docker.pkg.dev/${PROJECT_ID}/spaces-images/${_IMAGE_PREFIX}-controller:latest',
+    '${_TARGET_REPO}/${_IMAGE_PREFIX}-controller:${_IMAGE_TAG}',
+    '${_TARGET_REPO}/${_IMAGE_PREFIX}-controller:latest',
     # broker gce proxy
     'gcr.io/${PROJECT_ID}/${_IMAGE_PREFIX}-gce-proxy:${_IMAGE_TAG}',
     'gcr.io/${PROJECT_ID}/${_IMAGE_PREFIX}-gce-proxy:latest',
-    'us-docker.pkg.dev/${PROJECT_ID}/spaces-images/${_IMAGE_PREFIX}-gce-proxy:${_IMAGE_TAG}',
-    'us-docker.pkg.dev/${PROJECT_ID}/spaces-images/${_IMAGE_PREFIX}-gce-proxy:latest',
+    '${_TARGET_REPO}/${_IMAGE_PREFIX}-gce-proxy:${_IMAGE_TAG}',
+    '${_TARGET_REPO}/${_IMAGE_PREFIX}-gce-proxy:latest',
     # autoneg controller
     'gcr.io/${PROJECT_ID}/${_IMAGE_PREFIX}-autoneg-controller:${_IMAGE_TAG}',
     'gcr.io/${PROJECT_ID}/${_IMAGE_PREFIX}-autoneg-controller:latest',
-    'us-docker.pkg.dev/${PROJECT_ID}/spaces-images/${_IMAGE_PREFIX}-autoneg-controller:${_IMAGE_TAG}',
-    'us-docker.pkg.dev/${PROJECT_ID}/spaces-images/${_IMAGE_PREFIX}-autoneg-controller:latest'
+    '${_TARGET_REPO}/${_IMAGE_PREFIX}-autoneg-controller:${_IMAGE_TAG}',
+    '${_TARGET_REPO}/${_IMAGE_PREFIX}-autoneg-controller:latest'
 ]
 
 steps:
@@ -66,14 +68,13 @@ steps:
     - '-c'
     - |
       docker build -t gcr.io/${PROJECT_ID}/broker-installer:${_IMAGE_TAG} --cache-from gcr.io/${PROJECT_ID}/broker-installer:latest installer
-      docker tag gcr.io/${PROJECT_ID}/broker-installer:${_IMAGE_TAG}  us-docker.pkg.dev/${PROJECT_ID}/spaces-images/broker-installer:${_IMAGE_TAG}
-      docker tag gcr.io/${PROJECT_ID}/broker-installer:${_IMAGE_TAG}  us-docker.pkg.dev/${PROJECT_ID}/spaces-images/broker-installer:latest
+      docker tag gcr.io/${PROJECT_ID}/broker-installer:${_IMAGE_TAG}  ${_TARGET_REPO}/broker-installer:${_IMAGE_TAG}
+      docker tag gcr.io/${PROJECT_ID}/broker-installer:${_IMAGE_TAG}  ${_TARGET_REPO}/broker-installer:latest
 
       apt install jq -y
       export DOCKER_CLI_EXPERIMENTAL=enabled
-      curl -o check_docker_image.sh  https://gist.githubusercontent.com/deepak7093/17a0ce3506c39bae0ecaba46d0821510/raw/a2e63872ccb9ef02b718156a2b5c7744221830c5/check_docker_image.sh
-      chmod +x check_docker_image.sh
-      ./check_docker_image.sh -i gcr.io/${PROJECT_ID}/broker-installer:${_IMAGE_TAG} || true
+      chmod +x setup/scripts/check_docker_image.sh
+      ./setup/scripts/check_docker_image.sh -i gcr.io/${PROJECT_ID}/broker-installer:${_IMAGE_TAG} || true
   waitFor:
     -  installer-pull
 
@@ -103,14 +104,13 @@ steps:
     - '-c'
     - |
       docker build -t gcr.io/${PROJECT_ID}/${_IMAGE_PREFIX}-controller:${_IMAGE_TAG} --cache-from gcr.io/${PROJECT_ID}/${_IMAGE_PREFIX}-controller:latest controller
-      docker tag gcr.io/${PROJECT_ID}/${_IMAGE_PREFIX}-controller:${_IMAGE_TAG}  us-docker.pkg.dev/${PROJECT_ID}/spaces-images/${_IMAGE_PREFIX}-controller:${_IMAGE_TAG}
-      docker tag gcr.io/${PROJECT_ID}/${_IMAGE_PREFIX}-controller:${_IMAGE_TAG}  us-docker.pkg.dev/${PROJECT_ID}/spaces-images/${_IMAGE_PREFIX}-controller:latest
+      docker tag gcr.io/${PROJECT_ID}/${_IMAGE_PREFIX}-controller:${_IMAGE_TAG}  ${_TARGET_REPO}/${_IMAGE_PREFIX}-controller:${_IMAGE_TAG}
+      docker tag gcr.io/${PROJECT_ID}/${_IMAGE_PREFIX}-controller:${_IMAGE_TAG}  ${_TARGET_REPO}/${_IMAGE_PREFIX}-controller:latest
 
       apt install jq -y
       export DOCKER_CLI_EXPERIMENTAL=enabled
-      curl -o check_docker_image.sh  https://gist.githubusercontent.com/deepak7093/17a0ce3506c39bae0ecaba46d0821510/raw/a2e63872ccb9ef02b718156a2b5c7744221830c5/check_docker_image.sh
-      chmod +x check_docker_image.sh
-      ./check_docker_image.sh -i gcr.io/${PROJECT_ID}/${_IMAGE_PREFIX}-controller:${_IMAGE_TAG} || true
+      chmod +x setup/scripts/check_docker_image.sh
+      ./setup/scripts/check_docker_image.sh -i gcr.io/${PROJECT_ID}/broker-installer:${_IMAGE_TAG} || true
   waitFor:
     -  controller-pull
 
@@ -139,13 +139,12 @@ steps:
     - '-c'
     - |
       docker build -t gcr.io/${PROJECT_ID}/${_IMAGE_PREFIX}-gce-proxy:${_IMAGE_TAG} --cache-from gcr.io/${PROJECT_ID}/${_IMAGE_PREFIX}-gce-proxy:latest gce-proxy
-      docker tag gcr.io/${PROJECT_ID}/${_IMAGE_PREFIX}-gce-proxy:${_IMAGE_TAG}  us-docker.pkg.dev/${PROJECT_ID}/spaces-images/${_IMAGE_PREFIX}-gce-proxy:${_IMAGE_TAG}
-      docker tag gcr.io/${PROJECT_ID}/${_IMAGE_PREFIX}-gce-proxy:${_IMAGE_TAG}  us-docker.pkg.dev/${PROJECT_ID}/spaces-images/${_IMAGE_PREFIX}-gce-proxy:laest
+      docker tag gcr.io/${PROJECT_ID}/${_IMAGE_PREFIX}-gce-proxy:${_IMAGE_TAG}  ${_TARGET_REPO}/${_IMAGE_PREFIX}-gce-proxy:${_IMAGE_TAG}
+      docker tag gcr.io/${PROJECT_ID}/broker-installer:${_IMAGE_TAG}  ${_TARGET_REPO}/${_IMAGE_PREFIX}-gce-proxy:laest
       apt install jq -y
       export DOCKER_CLI_EXPERIMENTAL=enabled
-      curl -o check_docker_image.sh  https://gist.githubusercontent.com/deepak7093/17a0ce3506c39bae0ecaba46d0821510/raw/a2e63872ccb9ef02b718156a2b5c7744221830c5/check_docker_image.sh
-      chmod +x check_docker_image.sh
-      ./check_docker_image.sh -i gcr.io/${PROJECT_ID}/${_IMAGE_PREFIX}-gce-proxy:${_IMAGE_TAG} || true
+       chmod +x setup/scripts/check_docker_image.sh
+      ./setup/scripts/check_docker_image.sh -i gcr.io/${PROJECT_ID}/broker-installer:${_IMAGE_TAG} || true
   waitFor:
     -  gce-proxy-pull
 
@@ -197,13 +196,12 @@ steps:
     - '-c'
     - |
       docker build -t gcr.io/${PROJECT_ID}/${_IMAGE_PREFIX}-autoneg-controller:${_IMAGE_TAG} --cache-from gcr.io/${PROJECT_ID}/${_IMAGE_PREFIX}-autoneg-controller:latest .
-      docker tag gcr.io/${PROJECT_ID}/${_IMAGE_PREFIX}-autoneg-controller:${_IMAGE_TAG}  us-docker.pkg.dev/${PROJECT_ID}/spaces-images/${_IMAGE_PREFIX}-autoneg-controller:${_IMAGE_TAG}
-      docker tag gcr.io/${PROJECT_ID}/${_IMAGE_PREFIX}-autoneg-controller:${_IMAGE_TAG}  us-docker.pkg.dev/${PROJECT_ID}/spaces-images/${_IMAGE_PREFIX}-autoneg-controller:laest
+      docker tag gcr.io/${PROJECT_ID}/${_IMAGE_PREFIX}-autoneg-controller:${_IMAGE_TAG}  ${_TARGET_REPO}/${_IMAGE_PREFIX}-autoneg-controller:${_IMAGE_TAG}
+      docker tag gcr.io/${PROJECT_ID}/${_IMAGE_PREFIX}-autoneg-controller:${_IMAGE_TAG}  ${_TARGET_REPO}/${_IMAGE_PREFIX}-autoneg-controller:laest
       apt install jq -y
       export DOCKER_CLI_EXPERIMENTAL=enabled
-      curl -o check_docker_image.sh  https://gist.githubusercontent.com/deepak7093/17a0ce3506c39bae0ecaba46d0821510/raw/a2e63872ccb9ef02b718156a2b5c7744221830c5/check_docker_image.sh
-      chmod +x check_docker_image.sh
-      ./check_docker_image.sh -i gcr.io/${PROJECT_ID}/${_IMAGE_PREFIX}-autoneg-controller:${_IMAGE_TAG} || true
+      chmod +x setup/scripts/check_docker_image.sh
+      ./setup/scripts/check_docker_image.sh -i gcr.io/${PROJECT_ID}/broker-installer:${_IMAGE_TAG} || true
   waitFor:
     -  autoneg-controller-build
 - name: 'gcr.io/cloud-builders/docker'
